--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
      </head> 
      <body> 
          <h1><strong>Welcome to my web page!</strong></h1>
+         <p>A test to use git pull</p>
          Hello world! 
      </body>
  </html>
