--- a/hello.html
+++ b/hello.html
@@ -2,10 +2,18 @@
  <html lang="en"> 
      <head> 
          <title>Hello!</title>
+        <style>
+        div{
+	width:30px;
+        }
+        </style>
      </head> 
      <body> 
          <h1><strong>Welcome to my web page!</strong></h1>
          <p>A test to use git pull</p>
-         Hello world! 
+         Hello world!
+	 <div>
+		 <strong>Hi</strong>
+	 </div>
      </body>
  </html>
